# ADIOS2-Testing

./: common.cmake
gray-scott/: CMakeLists.txt
gray-scott/testing/: CMakeLists.txt  dump.sh.in
performance/: CMakeLists.txt  CTestConfig.cmake  README.md
performance/adios2/: CMakeLists.txt
performance/cheetah/: README.md  cheetah-campaign.py  staging-perf-test-16MB-8to1.txt
performance/common/: cheetah-group-stats.sh.in  cheetah-run-and-wait.sh.in  collect_json_for_ctest.py  env-exec.sh
performance/e3sm-mmf/: CMakeLists.txt  E3SM-IOTest-config.txt  iotest_wrapper.sh.in
performance/effis-coupling-iotests/: ReadMe.md  campaign.py  effis-coupling-xcg.txt  effis-coupling-xcg.xml  effis-coupling-xg.xml  effis-coupling-xgn.txt  effis-coupling.sh  local_sweep_groups.py  summit_node_layouts.py  summit_sweep_groups.py  sweep_groups_helper.py  sweeps.py
performance/iotests/: iotest_wrapper.sh.in
performance/lammps-pca/: node_layouts.py
performance/lammps-rdf/: lammps-campaign-spec.py  source_sw.sh  sweeps.py
performance/local-arrays/: Makefile  README  larray_reader.cpp  larray_writer.cpp
performance/nwchem-sorting/: campaign_rhea.py  campaign_summit.py  campaign_theta.py  create-campaign.sh  create_campaign_rhea.sh  create_campaign_summit.sh  create_campaign_theta.sh  create_sweep_groups.py  readme.txt  rhea_sweep_groups.py  summit_node_layouts.py  summit_sweep_groups.py  sweeps.py  theta_sweep_groups.py
performance/planar-reads/: campaign.py  campaign_planar.py  local_sweep_groups.py  planar_reads.sh  sweep_groups_helper.py  sweeps.py
performance/sst-metadata/: README.md  adios_iotest  campaign.py  campaign_results.csv  local_sweep_groups.py  summit_node_layouts.py  summit_sweep_groups.py  sweep_groups_helper.py  sweeps.py  write_perf_1.txt
performance/staging-perf/: README.md  campaign.py  cleanup.sh  env_setup_local.sh  local_sweep_groups.py  parse_timings.py  staging-perf-test-1MB-8to1.txt  summit_node_layouts.py  summit_sweep_groups.py  sweep_groups_helper.py  sweeps.py
performance/xgc-5dpdf/: CMakeLists.txt  README.md  campaign.py  campaign.py.in  local_sweep_groups.py  rhea_medium_sweep_groups.py  rhea_small_sweep_groups.py  summit_large_sweep_group.py  summit_medium_sweep_groups.py  summit_small_sweep_groups.py  summit_tiny_sweep_groups.py  sweep_groups_helper.py
performance/xgc-restart/: CMakeLists.txt  README.md  campaign.py  campaign.py.in  local_sweep_groups.py  parse_timings.py  rhea_medium_sweep_groups.py  rhea_small_sweep_groups.py  rhea_sweep_groups.py  small_campaign.py  start_campain.sh  (+8 more)
(+105 files in other folders)
